@@ -3,8 +3,8 @@ Title: Reference of CMake the Cross-Platform Makefile Generator.
 Section: Programming
 
 Format: HTML
-Index: /usr/share/doc/cmake/cmake.html
-Files: /usr/share/doc/cmake/cmake.html
+Index: /usr/share/doc/cmake-data/cmake.html
+Files: /usr/share/doc/cmake-data/cmake.html
 
 Format: Text
-Files: /usr/share/doc/cmake/cmake.txt.gz
+Files: /usr/share/doc/cmake-data/cmake.txt.gz
