@@ -34,7 +34,7 @@ override_dh_auto_clean:
 	rm -f $(BUILD_FLAGS_FILE)
 
 override_dh_installdocs:
-	dh_installdocs --link-doc=cmake
+	dh_installdocs --link-doc=cmake-data
 
 %:
 	dh --parallel --builddirectory=Build --dbg-package=cmake-dbg $@
