@@ -1,5 +1,7 @@
 cmake (2.8.3-3) UNRELEASED; urgency=low
 
+  * Install documentation to /usr/share/cmake-data instead as it's the "base"
+    package rather than cmake. Also link doc directories to it.
 
  -- Modestas Vainius <modax@debian.org>  Sun, 02 Jan 2011 13:29:09 +0200
 
